cmake_minimum_required(VERSION 3.24)
project(cpp_test)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_test main.cpp)
add_executable(test01 test01.cpp)
add_executable(test02 test02.cpp)
add_executable(test03 test03.cpp)
add_executable(test04 test04.cpp)
add_executable(test05 test05.cpp)
add_executable(sort 数据结构/sort_test.cpp)
add_executable(tree 数据结构/tree_test.cpp)
