cmake_minimum_required(VERSION 3.24)
project(cpp_test)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_test main.cpp)
add_executable(test01 test01.cpp)
add_executable(test02 test02.cpp)
add_executable(test03 test03.cpp)
add_executable(test04 test04.cpp)
add_executable(test05 test05.cpp)
add_executable(sort 数据结构/sort_test.cpp)
add_executable(tree 数据结构/tree_test.cpp)
add_executable(hungry_singleton 设计模式/hungry_singleton.cpp)
add_executable(lazy_singleton 设计模式/lazy_singleton.cpp)
add_executable(Singleton 设计模式/Singleton.cpp)
add_executable(factory_model 设计模式/factory_model.cpp)
